--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -298,6 +298,36 @@
             <string notr="true">1</string>
            </property>
           </column>
+          <item>
+           <property name="text">
+            <string>qweqwe</string>
+           </property>
+           <item>
+            <property name="text">
+             <string>qwe</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>qwe</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>qwe</string>
+            </property>
+           </item>
+          </item>
+          <item>
+           <property name="text">
+            <string>qwe</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>qwe</string>
+           </property>
+          </item>
          </widget>
         </item>
        </layout>
